--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@cloudinary/react": "^1.14.4",
     "@cloudinary/url-gen": "^1.22.0",
     "@tailwindcss/vite": "^4.1.18",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.574.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
